include/gpump_f.F90


interface gpump_f_cpu_ack_iput_x
subroutine gpump_f_cpu_ack_iput_x(target, index) &
bind(C, name='gpump_f_cpu_ack_iput_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
end subroutine gpump_f_cpu_ack_iput_x
end interface gpump_f_cpu_ack_iput_x

interface gpump_f_is_put_complete_x
subroutine gpump_f_is_put_complete_x(target, index, is_complete) &
bind(C, name='gpump_f_is_put_complete_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_INT), intent(inout) :: is_complete
end subroutine gpump_f_is_put_complete_x
end interface gpump_f_is_put_complete_x

interface gpump_f_wait_put_complete_x
subroutine gpump_f_wait_put_complete_x(target, index) &
bind(C, name='gpump_f_wait_put_complete_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
end subroutine gpump_f_wait_put_complete_x
end interface gpump_f_wait_put_complete_x

interface gpump_f_stream_get_x
subroutine gpump_f_stream_get_x(target, index, stream, offset, remote_offset, size) &
bind(C, name='gpump_f_stream_get_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_LONG), intent(in), value :: stream
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_stream_get_x
end interface gpump_f_stream_get_x

interface gpump_f_iget_x
subroutine gpump_f_iget_x(target, index, offset, remote_offset, size) &
bind(C, name='gpump_f_iget_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_iget_x
end interface gpump_f_iget_x

interface gpump_f_stream_wait_get_complete_x
subroutine gpump_f_stream_wait_get_complete_x(target, index, stream) &
bind(C, name='gpump_f_stream_wait_get_complete_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_LONG), intent(in), value :: stream
end subroutine gpump_f_stream_wait_get_complete_x
end interface gpump_f_stream_wait_get_complete_x

interface gpump_f_cpu_ack_iget_x
subroutine gpump_f_cpu_ack_iget_x(target, index) &
bind(C, name='gpump_f_cpu_ack_iget_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
end subroutine gpump_f_cpu_ack_iget_x
end interface gpump_f_cpu_ack_iget_x

interface gpump_f_is_get_complete_x
subroutine gpump_f_is_get_complete_x(target, index, is_complete) &
bind(C, name='gpump_f_is_get_complete_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_INT), intent(inout) :: is_complete
end subroutine gpump_f_is_get_complete_x
end interface gpump_f_is_get_complete_x

interface gpump_f_wait_get_complete_x
subroutine gpump_f_wait_get_complete_x(target, index) &
bind(C, name='gpump_f_wait_get_complete_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
end subroutine gpump_f_wait_get_complete_x
end interface gpump_f_wait_get_complete_x

interface gpump_f_stream_send
subroutine gpump_f_stream_send(target, stream, mr_index, offset, size) &
bind(C,name='gpump_f_stream_send')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: stream
integer(kind=C_INT), intent(in), value :: mr_index
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_stream_send
end interface gpump_f_stream_send

interface gpump_f_isend
subroutine gpump_f_isend(target, mr_index, offset, size) &
bind(C,name='gpump_f_isend')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: mr_index
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_isend
end interface gpump_f_isend

interface gpump_f_stream_wait_send_complete
subroutine gpump_f_stream_wait_send_complete(target, stream) &
bind(C, name='gpump_f_stream_wait_send_complete')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: stream
end subroutine gpump_f_stream_wait_send_complete
end interface gpump_f_stream_wait_send_complete

interface gpump_f_cpu_ack_isend
subroutine gpump_f_cpu_ack_isend(target) &
bind(C, name='gpump_f_cpu_ack_isend')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_cpu_ack_isend
end interface gpump_f_cpu_ack_isend

interface gpump_f_is_send_complete
subroutine gpump_f_is_send_complete(target, is_complete) &
bind(C, name='gpump_f_is_send_complete')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(inout) :: is_complete
end subroutine gpump_f_is_send_complete
end interface gpump_f_is_send_complete

interface gpump_f_wait_send_complete
subroutine gpump_f_wait_send_complete(target) &
bind(C, name='gpump_f_wait_send_complete')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_wait_send_complete
end interface gpump_f_wait_send_complete

interface gpump_f_receive
subroutine gpump_f_receive(target, mr_index, offset, size) &
bind(C,name='gpump_f_receive')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: mr_index
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_receive
end interface gpump_f_receive

interface gpump_f_stream_wait_recv_complete
subroutine gpump_f_stream_wait_recv_complete(source, stream) &
bind(C, name='gpump_f_stream_wait_recv_complete')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: source
integer(kind=C_LONG), intent(in), value :: stream
end subroutine gpump_f_stream_wait_recv_complete
end interface gpump_f_stream_wait_recv_complete

interface gpump_f_cpu_ack_recv
subroutine gpump_f_cpu_ack_recv(source) &
bind(C, name='gpump_f_cpu_ack_recv')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: source
end subroutine gpump_f_cpu_ack_recv
end interface gpump_f_cpu_ack_recv

interface gpump_f_is_receive_complete
subroutine gpump_f_is_receive_complete(target, is_complete) &
bind(C, name='gpump_f_is_receive_complete')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(inout) :: is_complete
end subroutine gpump_f_is_receive_complete
end interface gpump_f_is_receive_complete

interface gpump_f_wait_receive_complete
subroutine gpump_f_wait_receive_complete(target) &
bind(C, name='gpump_f_wait_receive_complete')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_wait_receive_complete
end interface gpump_f_wait_receive_complete

interface gpump_f_term
subroutine gpump_f_term() &
bind(C, name='gpump_f_term')
end subroutine gpump_f_term
end interface gpump_f_term


interface gpump_f_init_r
subroutine gpump_f_init_r(comm) &
bind(C, name='gpump_f_init_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
end subroutine gpump_f_init_r
end interface gpump_f_init_r

interface gpump_f_register_region_r
subroutine gpump_f_register_region_r(comm, mr_index, addr, size) &
bind(C, name='gpump_f_register_region_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(out) :: mr_index
integer(kind=C_LONG), intent(in), value :: addr
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_register_region_r
end interface gpump_f_register_region_r

interface gpump_f_replace_region_r
subroutine gpump_f_replace_region_r(comm, mr_index, addr, size) &
bind(C, name='gpump_f_replace_region_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: mr_index
integer(kind=C_LONG), intent(in), value :: addr
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_replace_region_r
end interface gpump_f_replace_region_r

interface gpump_f_deregister_region_r
subroutine gpump_f_deregister_region_r(comm, mr_index) &
bind(C, name='gpump_f_deregister_region_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: mr_index
end subroutine gpump_f_deregister_region_r
end interface gpump_f_deregister_region_r

interface gpump_f_connect_propose_r
subroutine gpump_f_connect_propose_r(comm, target) &
bind(C, name='gpump_f_connect_propose_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_connect_propose_r
end interface gpump_f_connect_propose_r

interface gpump_f_connect_accept_r
subroutine gpump_f_connect_accept_r(comm, target) &
bind(C, name='gpump_f_connect_accept_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_connect_accept_r
end interface gpump_f_connect_accept_r

!interface gpump_f_connect_r
!subroutine gpump_f_connect_r(comm, target) &
!bind(C, name='gpump_f_connect_r')
!use iso_c_binding
!integer(kind=C_INT), intent(in), value :: target
!end subroutine gpump_f_connect_r
!end interface gpump_f_connect_r

interface gpump_f_disconnect_r
subroutine gpump_f_disconnect_r(comm, target) &
bind(C, name='gpump_f_disconnect_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_disconnect_r
end interface gpump_f_disconnect_r

interface gpump_f_create_window_propose_r
subroutine gpump_f_create_window_propose_r(comm, target, local_address, remote_address, size) &
bind(C, name='gpump_f_create_window_propose_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: local_address
integer(kind=C_LONG), intent(in), value :: remote_address
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_create_window_propose_r
end interface gpump_f_create_window_propose_r

interface gpump_f_replace_window_propose_r
subroutine gpump_f_replace_window_propose_r(comm, target, local_address, remote_address, size) &
bind(C, name='gpump_f_replace_window_propose_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: local_address
integer(kind=C_LONG), intent(in), value :: remote_address
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_replace_window_propose_r
end interface gpump_f_replace_window_propose_r

interface gpump_f_window_accept_r
subroutine gpump_f_window_accept_r(comm, target) &
bind(C, name='gpump_f_window_accept_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_window_accept_r
end interface gpump_f_window_accept_r

!interface gpump_f_create_window_r
!subroutine gpump_f_create_window_r(comm, target, local_address, remote_address, size) &
!bind(C, name='gpump_f_create_window_r')
!use iso_c_binding
!integer(kind=C_INT), intent(in), value :: target
!integer(kind=C_LONG), intent(in), value :: local_address
!integer(kind=C_LONG), intent(in), value :: remote_address
!integer(kind=C_LONG), intent(in), value :: size
!end subroutine gpump_f_create_window_r
!end interface gpump_f_create_window_r
